Update Setup Pages Till Setup Page 3

--- a/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/FirstSetupPage/FirstSetupPage.css
+++ b/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/FirstSetupPage/FirstSetupPage.css
@@ -1,4 +1,4 @@
-.FirstSetup-css {
+/* .FirstSetup-css {
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -10,8 +10,22 @@
   flex: 1;
   width: 70%;
   height: fit-content;
-  /* padding: 20px;
+  
+} */
+
+.FirstSetup-css {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  align-items: center;
   overflow-y: auto;
-  margin-bottom: 20px;
-  box-sizing: border-box; */
+}
+
+.FirstSetup-main-body {
+  flex: 1;
+  width: 70%;
+  max-height: 80vh; /* You can adjust the max-height to your preference */
+  overflow-y: auto; /* Enable vertical scrolling */
+  padding: 20px;
+  box-sizing: border-box;
 }
