--- a/FrontEnd_CardanoLRS/src/Components/TierCreation/TierCreation.css
+++ b/FrontEnd_CardanoLRS/src/Components/TierCreation/TierCreation.css
@@ -5,7 +5,7 @@
   gap: 20px;
   padding: 20px;
   background-color: #f0c6c6;
-  height: 80%;
+  height: 100%;
   border-radius: 10px;
 }
 
@@ -37,10 +37,14 @@
 
 .input-field,
 .offer-field {
-  display: flex;
-  flex-direction: column;
-  flex: 1; /* Ensures equal width for both fields */
-  width: 50%;
+  flex: 1;
+  padding: 15px;
+
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f0f0f0;
+  font-size: 16px;
+  position: relative;
 }
 
 .input-field label,
@@ -64,11 +68,12 @@
 .dropdown-container {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 
 .add-btn {
-  margin-left: 10px;
-  padding: 5px 10px;
+  /* margin-left: 10px; */
+  /* padding: 5px 10px; */
   font-size: 1.2rem;
   font-weight: bold;
   border: 1px solid #333;
