--- a/FrontEnd_CardanoLRS/src/Components/LoginForm/Login.css
+++ b/FrontEnd_CardanoLRS/src/Components/LoginForm/Login.css
@@ -125,3 +125,18 @@
   border-color: #d9999b;
   background-color: #fff;
 }
+
+.spinner {
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
