--- a/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/Customers/CustomerList.css
+++ b/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/Customers/CustomerList.css
@@ -47,3 +47,38 @@ body {
     transform: rotate(360deg);
   }
 }
+
+/* Modal Overlay */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 300px;
+  text-align: center;
+}
+
+/* Modal Actions */
+.modal-actions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+/* Button Styling */
+button {
+  padding: 10px;
+  cursor: pointer;
+}
