--- a/FrontEnd_CardanoLRS/src/Components/SignupForm/Signup.css
+++ b/FrontEnd_CardanoLRS/src/Components/SignupForm/Signup.css
@@ -13,6 +13,20 @@
   position: relative;
 }
 
+.User-Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--form-bg-color);
+  width: 600px;
+  height: auto;
+  border-radius: 20px;
+  padding: 20px;
+  box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
+  margin: 10px auto;
+  position: relative;
+}
+
 .Container {
   display: flex;
   justify-content: center;
@@ -109,4 +123,20 @@
 .submit-button-next2:hover {
   background-color: transparent;
   text-decoration: underline;
+}
+
+.user-submit-button {
+  color: black;
+  border: none;
+  width: 150px;
+  height: 50px;
+  border-radius: 30px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
+  font-family: "Inika", sans-serif;
+  font-weight: bold;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
+    inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  transition: background-color 0.3s ease;
 }
