--- a/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/Customers/CustomerList.css
+++ b/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/Customers/CustomerList.css
@@ -48,37 +48,50 @@ body {
   }
 }
 
-/* Modal Overlay */
-.modal-overlay {
+/* Styles for the modal */
+.edit-tier-container {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 }
 
-/* Modal Content */
-.modal-content {
+.edit-tier-modal {
   background-color: white;
   padding: 20px;
   border-radius: 8px;
-  width: 300px;
-  text-align: center;
+  width: 400px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-/* Modal Actions */
-.modal-actions {
+.edit-tier-buttons {
   display: flex;
   justify-content: space-between;
-  margin-top: 10px;
+  margin-top: 20px;
 }
 
-/* Button Styling */
 button {
-  padding: 10px;
+  padding: 10px 15px;
+  background-color: #f0c6c6;
+  color: white;
+  border: none;
+  border-radius: 5px;
   cursor: pointer;
+}
+
+button:hover {
+  background-color: #edb2b2;
+}
+
+.footer-button {
+  font-family: "Inika", sans-serif;
+  font-size: 15px;
+  text-align: center;
+  color: black;
 }
