Business End Integration Done

--- a/FrontEnd_CardanoLRS/src/Components/OfferCreationForm/OfferCreationForm.css
+++ b/FrontEnd_CardanoLRS/src/Components/OfferCreationForm/OfferCreationForm.css
@@ -104,9 +104,11 @@
 /* Navigation Buttons */
 .form-navigation {
   display: flex;
-  /* justify-content: space-between; */
-  justify-content: flex-end;
+  justify-content: center;
   margin-top: 30px;
+  flex-wrap: wrap;
+  position: relative;
+  right: 40px;
 }
 
 .navigation-button {
