--- a/FrontEnd_CardanoLRS/src/Components/RewardRules/RewardRules.css
+++ b/FrontEnd_CardanoLRS/src/Components/RewardRules/RewardRules.css
@@ -1,12 +1,9 @@
-/* html,
-body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  overflow-y: auto;
-  font-family: Inika, sans-serif;
-} */
-
+.reward-form-actions {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 40px;
+}
 .reward-rules {
   background-color: #f8d7da;
   padding: 20px;
@@ -21,7 +18,7 @@ body {
 
 .reward-rules-container {
   padding-bottom: 20px;
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
 h1 {
