--- a/FrontEnd_CardanoLRS/src/Components/Wallet/WalletConnect.css
+++ b/FrontEnd_CardanoLRS/src/Components/Wallet/WalletConnect.css
@@ -1,7 +1,5 @@
-.wallet-container {
-  background-color: #d8f3f8;
-  border-radius: 10px;
-  /* padding: 20px; */
+/* .wallet-container {
+  
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -48,7 +46,7 @@
   color: #000;
   font-weight: bold;
   box-shadow: 0px 6px 5px #00000066;
-  /* padding-top: 20px; */
+ 
 }
 
 .wallet-button:hover {
@@ -57,4 +55,4 @@
 
 .wallet-button:active {
   transform: scale(0.98);
-}
+} */
