--- a/FrontEnd_CardanoLRS/src/Components/SideBar/SideBar.css
+++ b/FrontEnd_CardanoLRS/src/Components/SideBar/SideBar.css
@@ -11,7 +11,6 @@ body {
 
 .SideBar-Menu {
   display: flex;
-  /* justify-content: center; */
   padding-left: 20px;
   padding-right: 20px;
   margin: 0;
@@ -23,7 +22,6 @@ body {
 
 .SideBar-Menu li {
   list-style: none;
-  /* margin: 20px 0; */
   padding-top: 20px;
 }
 
@@ -38,8 +36,13 @@ body {
   border-radius: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
+  align-items: center;
 }
 
 .SideBar-Menu li a:hover {
   background-color: #dbdbdb;
+}
+
+.SideBar-Menu .icon {
+  display: flex;
 }
