--- a/FrontEnd_CardanoLRS/src/Components/Wallet/WalletConnect.css
+++ b/FrontEnd_CardanoLRS/src/Components/Wallet/WalletConnect.css
@@ -1,4 +1,4 @@
-/* .wallet-container {
+.wallet-container {
   
   text-align: center;
   display: flex;
@@ -55,4 +55,14 @@
 
 .wallet-button:active {
   transform: scale(0.98);
-} */
+}
+
+.wallet-adderss {
+  font-family: "Inika";
+  font-size: 40px;
+  font-weight: bold;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+}
+
