--- a/FrontEnd_CardanoLRS/src/Pages/UserEnd/UserWallet/UserWallet.css
+++ b/FrontEnd_CardanoLRS/src/Pages/UserEnd/UserWallet/UserWallet.css
@@ -1,4 +1,19 @@
 .UserWallet {
   display: flex;
   flex-direction: row;
+  gap: 7%;
+}
+
+.wallet-type {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+} 
+
+.wallet-selection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
