--- a/FrontEnd_CardanoLRS/src/Components/Wallet/WalletConnect.css
+++ b/FrontEnd_CardanoLRS/src/Components/Wallet/WalletConnect.css
@@ -1,18 +1,18 @@
 .wallet-container {
-  
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  width: 90%;
-  height: 400px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  flex-wrap: wrap;
+  background-color: #18cbdf;
+  border-radius: 10px;
+  padding-top: 20px;
 }
 
 .Outer-wallet-container {
   display: flex;
-  height: 90vh;
+  padding-top: 20px;
   width: 90%;
   flex-wrap: wrap;
   align-content: center;
@@ -46,7 +46,6 @@
   color: #000;
   font-weight: bold;
   box-shadow: 0px 6px 5px #00000066;
- 
 }
 
 .wallet-button:hover {
@@ -65,4 +64,3 @@
   display: flex;
   justify-content: center;
 }
-
