--- a/FrontEnd_CardanoLRS/src/Pages/UserEnd/UserWallet/UserWallet.css
+++ b/FrontEnd_CardanoLRS/src/Pages/UserEnd/UserWallet/UserWallet.css
@@ -14,5 +14,9 @@
 .wallet-selection {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* padding-left: 150px; */
   align-items: center;
+  width: 67%;
 }
