--- a/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/SignInPage/global.css
+++ b/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/SignInPage/global.css
@@ -66,7 +66,7 @@ body {
   background-color: #da9c9c;
   color: black;
   width: 200px;
-  height: 50px;
+  /* height: 50px; */
   font-size: 27px;
   border-radius: 15px;
   font-family: "Inika", serif;
