--- a/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/Tier/Tier.css
+++ b/FrontEnd_CardanoLRS/src/Pages/BusinessEnd/Tier/Tier.css
@@ -4,12 +4,13 @@
   height: 100vh;
 }
 
-.Setup-main-body {
+.Tier-Setup-main-body {
   width: 100%;
   padding: 20px;
   overflow-y: auto;
   flex: 1;
-  height: 100%;
+  height: 80%;
+  
   overflow-y: auto;
 }
 body {
