--- a/FrontEnd_CardanoLRS/src/Components/TierCreation/TierCreation.css
+++ b/FrontEnd_CardanoLRS/src/Components/TierCreation/TierCreation.css
@@ -118,7 +118,7 @@
 .button-group {
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 
 .back-btn,
